# backend/app/Http/Controllers/BlockController.php
@@ -23,8 +23,8 @@ class BlockController extends Controller
     /**
      * Display a listing of the resource.
      */
-    #[Get(path: '/api/blocks/{project}/blocks', tags: ['block'])]
-    #[PathParameter(name: 'project', required: true, schema: new Schema(type: 'integer'))]
+    #[Get(path: '/api/blocks/{project}/blocks', tags: ['block'], security: ['sessionAuth'])]
+    #[PathParameter(name: 'project', required: true, schema: new Schema(type: 'string', format: 'uuid'))]
     #[Response(response: 200, description: 'All blocks, 1 deep, project has.', content: new JsonContent(type: 'array', items: new Items(ref: '#/components/schemas/Block')))]
     #[Response(response: 404, description: 'Project not found.')]
     public function index(Project $project)
@@ -35,7 +35,7 @@ class BlockController extends Controller
     /**
      * Store a newly created resource in storage.
      */
-    #[Post(path: '/api/blocks', tags: ['block'])]
+    #[Post(path: '/api/blocks', tags: ['block'], security: ['sessionAuth'])]
     #[RequestBody(description: 'Name to crate the project', content: new JsonContent(ref: '#/components/schemas/StoreBlockRequest'))]
     #[Response(response: 204, description: 'Block created.')]
     public function store(StoreBlockRequest $request)
@@ -48,7 +48,7 @@ class BlockController extends Controller
     /**
      * Display the specified resource.
      */
-    #[Get(path: '/api/blocks/{block}', tags: ['block'])]
+    #[Get(path: '/api/blocks/{block}', tags: ['block'], security: ['sessionAuth'])]
     #[PathParameter(name: 'block', required: true, schema: new Schema(type: 'integer'))]
     #[Response(response: 200, description: 'Return block by id.', content: new JsonContent(ref: '#/components/schemas/Block'))]
     #[Response(response: 404, description: 'Block not found.')]
@@ -60,7 +60,7 @@ class BlockController extends Controller
     /**
      * Display the specified resource childern.
      */
-    #[Get(path: '/api/blocks/{block}/blocks', tags: ['block'])]
+    #[Get(path: '/api/blocks/{block}/blocks', tags: ['block'], security: ['sessionAuth'])]
     #[PathParameter(name: 'block', required: true, schema: new Schema(type: 'interger'))]
     #[Response(response: 200, description: 'All blocks, from blocks deep.', content: new JsonContent(type: 'array', items: new Items(ref: '#/components/schemas/Block')))]
     #[Response(response: 404, description: 'Project not found.')]
@@ -72,8 +72,8 @@ class BlockController extends Controller
     /**
      * Update the specified resource in storage.
      */
-    #[Put(path: '/api/blocks/{block}', tags: ['block'])]
-    #[Patch(path: '/api/blocks/{block}', tags: ['block'])]
+    #[Put(path: '/api/blocks/{block}', tags: ['block'], security: ['sessionAuth'])]
+    #[Patch(path: '/api/blocks/{block}', tags: ['block'], security: ['sessionAuth'])]
     #[RequestBody(description: 'Data to update block.', content: new JsonContent(ref: '#/components/schemas/UpdateBlockRequest'))]
     #[PathParameter(name: 'block', required: true, schema: new Schema(type: 'integer'))]
     #[Response(response: 204, description: 'Block updated.')]
@@ -88,7 +88,7 @@ class BlockController extends Controller
     /**
      * Remove the specified resource from storage.
      */
-    #[Delete(path: '/api/blocks/{block}', tags: ['block'])]
+    #[Delete(path: '/api/blocks/{block}', tags: ['block'], security: ['sessionAuth'])]
     #[PathParameter(name: 'block', required: true, schema: new Schema(type: 'integer'))]
     #[Response(response: 204, description: 'Block deleted.')]
     public function destroy(Block $block)
